<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator Simplified</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_C">C</string>
    <string name="str_sign">+,-</string>
    <string name="str_div">/</string>
    <string name="str_x">x</string>
    <string name="str_8">8</string>
    <string name="str_7">7</string>
    <string name="str_9">9</string>
    <string name="str_minus">-</string>
    <string name="str_4">4</string>
    <string name="str_1">1</string>
    <string name="str_0">0</string>
    <string name="str_5">5</string>
    <string name="str_2">2</string>
    <string name="str_6">6</string>
    <string name="str_plus">+</string>
    <string name="str_3">3</string>
    <string name="str_dec">.</string>
    <string name="str_eq">=</string>

</resources>