<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.AuthenticStudio.CalculatorSimplified.MainActivity">


    <EditText
        android:id="@+id/eTInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/eTInput"
        android:padding="10dp"
        android:text="@string/str_C"
        android:textSize="30sp" />
    <!--
        <EditText
            android:id="@+id/eTResult"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/eTInput"
            android:layout_centerHorizontal="true" />
    -->
    <Button
        android:id="@+id/btnNeg"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/eTInput"
        android:layout_toRightOf="@+id/btnClear"
        android:text="@string/str_sign"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/eTInput"
        android:layout_toRightOf="@+id/btnNeg"
        android:text="@string/str_div"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/eTInput"
        android:layout_toRightOf="@+id/btnDiv"
        android:text="@string/str_x"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btnNeg"
        android:layout_toRightOf="@+id/btn7"
        android:padding="10dp"
        android:text="@string/str_8"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btnClear"
        android:text="@string/str_7"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btnDiv"
        android:layout_toRightOf="@+id/btn8"
        android:text="@string/str_9"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnMult"
        android:layout_toRightOf="@+id/btn9"
        android:text="@string/str_minus"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btn7"
        android:padding="10dp"
        android:text="@string/str_4"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn4"
        android:padding="10dp"
        android:text="@string/str_1"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="160dp"
        android:layout_height="78dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn1"
        android:padding="10dp"
        android:text="@string/str_0"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@id/btn8"
        android:layout_toRightOf="@+id/btn4"
        android:padding="10dp"
        android:text="@string/str_5"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btn5"
        android:layout_toRightOf="@+id/btn1"
        android:padding="10dp"
        android:text="@string/str_2"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btn9"
        android:layout_toRightOf="@+id/btn5"
        android:padding="10dp"
        android:text="@string/str_6"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnMinus"
        android:layout_toRightOf="@+id/btn6"
        android:padding="10dp"
        android:text="@string/str_plus"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btn6"
        android:layout_toRightOf="@+id/btn2"
        android:padding="10dp"
        android:text="@string/str_3"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnDec"
        android:layout_width="80dp"
        android:layout_height="78dp"
        android:layout_below="@+id/btn3"
        android:layout_toRightOf="@+id/btn0"
        android:padding="10dp"
        android:text="@string/str_dec"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnEql"
        android:layout_width="80dp"
        android:layout_height="156dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnPlus"
        android:layout_toRightOf="@+id/btnDec"
        android:padding="10dp"
        android:text="@string/str_eq"
        android:textSize="30sp" />


</RelativeLayout>